@@ -21,7 +21,6 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 platform=@platform@
 
-# for convert_system_path_to_grub_path()
 . ${libdir}/grub/update-grub_lib
 
 # Do this as early as possible, since other commands might depend on it.
